@@ -1605,8 +1605,6 @@ void JIT::privateCompileSlowCases()
             break;
         }
         case op_loop_if_less: {
-            emitSlowScriptCheck(i);
-
             unsigned target = instruction[i + 3].u.operand;
             JSValue* src2imm = getConstantImmediateNumericArg(instruction[i + 2].u.operand);
             if (src2imm) {
@@ -1639,8 +1637,6 @@ void JIT::privateCompileSlowCases()
             break;
         }
         case op_loop_if_lesseq: {
-            emitSlowScriptCheck(i);
-
             unsigned target = instruction[i + 3].u.operand;
             JSValue* src2imm = getConstantImmediateNumericArg(instruction[i + 2].u.operand);
             if (src2imm) {
@@ -1701,8 +1697,6 @@ void JIT::privateCompileSlowCases()
             break;
         }
         case op_loop_if_true: {
-            emitSlowScriptCheck(i);
-
             __ link(iter->from, __ label());
             emitPutCTIArg(X86::eax, 0);
             emitCTICall(i, Interpreter::cti_op_jtrue);
